--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  flutter_page_view_indicator: ^0.0.5
 
 dev_dependencies:
   flutter_test:
