--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_page_view_indicator: ^0.0.5
+  google_fonts: ^2.1.1
 
 dev_dependencies:
   flutter_test:
